Fix login h2 alignment mobile

--- a/public/css/login.less
+++ b/public/css/login.less
@@ -14,3 +14,10 @@ body {
 .login-help {
   margin-top: 10px;
 }
+
+@media (max-width: 767px) {
+  .login h2 {
+    margin-top: 15px;
+    margin-left: 0px;
+  }
+}
